# flask-postgres-boilerplate

./: .flaskenv  Dockerfile  README.md  application.py  docker-compose.yml  envvars  pyproject.toml  requirements.txt  settings.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
counter/: models.py  tests.py  views.py
migrations/: env.py
migrations/versions/: 70acc94421a3_creating_counter_table.py
tests/: conftest.py  test_counter.py
