[tool.poetry]
name = "flask-pg-boilerplate"
version = "0.1.0"
description = ""
authors = ["Jorge Escobar <jorge@fromzero.io>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0.3"
python-dotenv = "0.19.2"
psycopg2-binary = "2.9.1"
Flask-SQLAlchemy = "2.5.1"
Flask-Migrate = "3.1.0"
pytest = "7.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
